# warp-sabre

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README  build_mingw.sh
.github/workflows/: build.yml  macos.yml
src/: CalibrationFile.cpp  CalibrationFile.h  ClearBounds.cpp  ClearTiles.cpp  CopyPixels.cpp  CopyPixels.h  GenTiles.cpp  ImageWarpByFunc.cpp  ImageWarpByFunc.h  ImgFrameBase.h  ImgMagick.cpp  ImgMagick.h  Log.cpp  Log.h  Point.h  ProgramOptions.cpp  ProgramOptions.h  ReadDelimitedFile.cpp  ReadDelimitedFile.h  SlippyMapTile.cpp  SlippyMapTile.h  SourceKml.cpp  SourceKml.h  StringUtils.cpp  StringUtils.h  TestCas.cpp  Tile.cpp  Tile.h  TileJob.cpp  TileJob.h  TransformPoly.cpp  TransformPoly.h  Warp.cpp  Warp.h  WarpOs.cpp  est.cpp
src/gbos1936/: Gbos1936.cpp  Gbos1936.h
src/gui/: BaseDlg.cpp  BaseDlg.h  GentilesDlg.cpp  GentilesDlg.h  GentilesGui.cpp  GentilesGui.h  WarpDlg.cpp  WarpDlg.h  WarpGui.cpp  WarpGui.h  WarpProgressDlg.cpp  WarpProgressDlg.h
src/gui/windows/: sabre.rc
src/libmorph/: resample_snippet.h
